--- a/index.css
+++ b/index.css
@@ -1,12 +1,8 @@
 /* Bebas Neue, Roboto, Syne Mono, Playfair Display */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne+Mono&display=swap");
 
 /* TODO: add media query for mobile devices */
 @media only screen and (max-width: 720px) {
-  body {
-    /* background-color: red; */
-  }
-
   .cluster-content p {
     flex: 0 100% !important;
     width: 100%;
@@ -21,7 +17,7 @@
   }
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 370px) {
   .title-combo h2 {
     text-align: left !important;
   }
@@ -108,6 +104,8 @@ h2 {
 
   margin-top: 40px;
   margin-bottom: 20px;
+
+  font-size: 1.75em;
 }
 
 h3 {
@@ -169,4 +167,9 @@ p b {
   border: 2px dashed black;
 
   border-radius: 10px;
+}
+
+#screen_container canvas {
+  max-width: 320px;
+  overflow: hidden;
 }
